; ModuleID = '/home/carl/AnghaBench/tig/src/extr_log.c_log_copy_rev.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_log.c_log_copy_rev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.view = type { i32 }
%struct.line = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.view*, %struct.line*)* @log_copy_rev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @log_copy_rev(%struct.view* %0, %struct.line* %1) #0 {
  %3 = alloca %struct.view*, align 8
  %4 = alloca %struct.line*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store %struct.view* %0, %struct.view** %3, align 8
  store %struct.line* %1, %struct.line** %4, align 8
  %7 = load %struct.line*, %struct.line** %4, align 8
  %8 = call i8* @box_text(%struct.line* %7)
  store i8* %8, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i64 @get_graph_indent(i8* %9)
  store i64 %10, i64* %6, align 8
  %11 = load %struct.view*, %struct.view** %3, align 8
  %12 = getelementptr inbounds %struct.view, %struct.view* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i8*, i8** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds i8, i8* %14, i64 %15
  %17 = call i32 @string_copy_rev_from_commit_line(i32 %13, i8* %16)
  ret void
}

declare dso_local i8* @box_text(%struct.line*) #1

declare dso_local i64 @get_graph_indent(i8*) #1

declare dso_local i32 @string_copy_rev_from_commit_line(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
